# changes

./: .chglog.yml  .gitignore  CHANGELOG.md  Pipfile  README.md  changelogs  changelogs.py  changes  changes.py  cli.py  history.yaml  log.markdown  pyproject.toml  setup.py
.github/workflows/: build.yaml  test.yaml
.nova/: Configuration.json
changes_semver/: __init__.py  __main__.py  changes.py  cli.py
changes_semver/templates/: multiple.markdown  single.markdown
examples/: gh-release.sh
scripts/: build.sh  release.sh  test.sh  test_wheel.sh
tests/: __init__.py  common.py  test_cli.py  test_common.py  test_history.py  test_version.py
